feat: Implement multiple new data analytics project modules with associated scripts, notebooks, and data, and update project configuration files.

--- a/01_sales_analytics/notebooks/sales_storytelling_dashboard.ipynb
+++ b/01_sales_analytics/notebooks/sales_storytelling_dashboard.ipynb
@@ -44,6 +44,7 @@
     "# Set plotting theme\n",
     "import plotly.io as pio\n",
     "pio.templates.default = \"plotly_white\"\n",
+    "pio.renderers.default = \"notebook_connected\"\n",
     "\n",
     "print(\"✅ Libraries imported successfully\")"
    ]
