--- a/06_inventory_analysis/notebooks/inventory_analysis_dashboard.ipynb
+++ b/06_inventory_analysis/notebooks/inventory_analysis_dashboard.ipynb
@@ -38,6 +38,7 @@
     }
    ],
    "source": [
+    "import plotly.io as pio\n",
     "# 📚 Import Libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -51,7 +52,8 @@
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.float_format', lambda x: f'{x:,.2f}')\n",
     "\n",
-    "print(\"✅ Libraries loaded successfully!\")"
+    "print(\"✅ Libraries loaded successfully!\")\n",
+    "pio.renderers.default = \"notebook_connected\""
    ]
   },
   {
