--- a/07_customer_analysis/notebooks/customer_insights_dashboard.ipynb
+++ b/07_customer_analysis/notebooks/customer_insights_dashboard.ipynb
@@ -43,6 +43,7 @@
     "# Set plotting theme\n",
     "import plotly.io as pio\n",
     "pio.templates.default = \"plotly_white\"\n",
+    "pio.renderers.default = \"notebook_connected\"\n",
     "\n",
     "print(\"✅ Advanced analytics libraries loaded.\")"
    ]
