feat: Initialize multi-domain data analytics portfolio project with ETL pipeline, data generation, and various analysis modules.

--- a/01_sales_analytics/notebooks/sales_storytelling_dashboard.ipynb
+++ b/01_sales_analytics/notebooks/sales_storytelling_dashboard.ipynb
@@ -8,7 +8,7 @@
     "# 📊 Sales Analytics Storytelling Dashboard\n",
     "## Turning Transactional Data into Strategic Growth Insights\n",
     "\n",
-    "**Project Context**: This analysis uses synthetic sales data to demonstrate how tracking core sales KPIs can reveal growth opportunities, highlight customer loyalty trends, and optimize product mix profitability."
+    "This analysis uses synthetic sales data to demonstrate how tracking core sales KPIs can reveal growth opportunities, highlight customer loyalty trends, and optimize product mix profitability."
    ]
   },
   {
