--- a/04_financial_analysis/notebooks/retail_finance_dashboard.ipynb
+++ b/04_financial_analysis/notebooks/retail_finance_dashboard.ipynb
@@ -8,7 +8,7 @@
     "# 💰 Retail Financial Analysis Dashboard\n",
     "## Profitability, Efficiency, and Liquidity Analysis\n",
     "\n",
-    "**Project Context**: This dashboard translates row-level sales and inventory data into executive financial insights. We analyze the 'Health' of the business using professional auditing and accounting metrics."
+    "This dashboard translates row-level sales and inventory data into executive financial insights. We analyze the 'Health' of the business using professional auditing and accounting metrics."
    ]
   },
   {
