--- a/07_customer_analysis/notebooks/customer_insights_dashboard.ipynb
+++ b/07_customer_analysis/notebooks/customer_insights_dashboard.ipynb
@@ -8,7 +8,7 @@
     "# 👥 Advanced Customer Analysis Dashboard\n",
     "## Behavioral Segmentation & Strategic Growth Insights\n",
     "\n",
-    "**Project Context**: This dashboard represents a Senior Data Science approach to customer analytics. We move beyond demographic counting to behavioral modeling using RFM (Recency, Frequency, Monetary) and Cohort Analysis."
+    "This dashboard represents a Advanced Data Analytics approach to customer analytics. We move beyond demographic counting to behavioral modeling using RFM (Recency, Frequency, Monetary) and Cohort Analysis."
    ]
   },
   {
